Wed Sep 05 15:29:22 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst: Change references to secore to references
	  to xappy.
	* xappy/fieldmappings_doctest1.txt: Add test which I wrote ages
	  ago, but had forgotten to commit.

Wed Sep 05 15:05:57 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/,testsuite/runtests.py: Add compatibility layer so that
	  old scripts can run without needing to change from "secore" to
	  "xappy", for now.  Change testsuite to run using new names (but
	  use the old ones too, to test the compatibility layer).

Wed Sep 05 14:24:52 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS,README,build.py,secore/,xappy/__init__.py: Rename secore
	  to xappy.  Adjust accompanying scripts and documentation
	  accordingly.

Wed Sep 05 02:23:46 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection_doctest2.txt: Change expected output to
	  match output given by xapian SVN HEAD, once the bug in
	  check_at_least is resolved.

Fri Aug 17 14:41:13 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* perftest/index_from_dump.py: Remove pointless "os.stat"

Fri Aug 17 14:38:46 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/indexerconnection.py: Add a method to get a list of the
	  fields which have actions defined.

Thu Aug 16 17:42:30 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/indexerconnection.py: Add a check for the database not
	  having been closed.
	* secore/searchconnection.py: Add method for getting an iterator
	  over all the documents in the database.  Add support for
	  rerunning the attempted access if get_document() catches a
	  DatabaseModifiedError.
	* secore/searchconnection_doctest2.txt: Change
	  "get_significant_terms" to "significant_terms()", and test it.

Thu Aug 16 17:24:06 BST 2007  Richard Boulton <richard@lemurconsulting.com>
