@@ -1,3 +1,10 @@
+Wed Sep 05 15:33:27 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* examples/fileindex.py,examples/search.py,perftest/index_from_dump.py,
+	  perftest/search_speed.py: Change all remaining references to
+	  "secore" name, except in the compatibility wrapper and the tests
+	  for that, to "xappy".
+
 Wed Sep 05 15:29:22 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* docs/introduction.rst: Change references to secore to references
